# eruditus-harness

./: .gitignore  LICENSE  README.md  pyproject.toml
codex-config/: AGENTS.md  config.toml
codex-config/mcp/: eruditus_harness_server.py
codex-config/rules/: default.rules
docs/: harness-engineering.md
